--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
 
-    <title><% _.slugify(appname) %></title>
+    <title><%= _.slugify(projectName) %></title>
 
     <link rel="stylesheet" href="styles/all.css">
 
