--- a/app/templates/app/styles/all.sass
+++ b/app/templates/app/styles/all.sass
@@ -2,10 +2,10 @@
 // b - block
 // t - type
 // is - statement
-// i - include html
-// s or [data-foo] - has class script
+// i - include HTML
+// s or [data-*] - has class script
 // %d - decorators placeholders
-// mod - modificator for modernizr, prefix-free and etc
+// mod - modificator for modernizr and etc
 // a - area
 @import "compass"
 
