--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
 
     <title><%= _.slugify(projectName) %></title>
@@ -17,7 +18,7 @@
 
 <div class="w-layout"></div>
 
-<!--<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>-->
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script type="text/javascript">
     if (!window.jQuery) {
         document.write('<script src="scripts/fallbacks/jquery-2.0.3.min.js"><\/script>');
@@ -25,9 +26,7 @@
 </script>
 
 <!-- build:js scripts/main.js -->
-<% if (stuff.foundation) { %>
-<script type="text/javascript" src="bower_components/foundation/js/foundation/foundation.js"></script>
-<% } %>
+<% if (stuff.foundation) { %><script type="text/javascript" src="bower_components/foundation/js/foundation/foundation.js"></script><% } %>
 <script type="text/javascript" src="scripts/main.js"></script>
 <!-- endbuild -->
 
