--- a/app/templates/app/styles/all.sass
+++ b/app/templates/app/styles/all.sass
@@ -7,54 +7,55 @@
 // %d - decorators placeholders
 // mod - modificator for modernizr and etc
 // a - area
-@import "compass"
+@charset "UTF-8"
 
+@import "compass"
 
 // Vars
 @import "vars"
 @import "mixins"
 @import "helpers"
 @import "palette"
-<% if (stuff.foundation) { %>@import "framework-config"<% } %>
+@import "foundation-settings"
+//$include-open-sans: false
 
 
 // Required gems
-<% if (stuff.foundation) { %>@import "foundation/components/global"
-@import "foundation/components/grid"
-//@import "foundation/components/visibility"
-//@import "foundation/components/block-grid"
-@import "foundation/components/type"
-//@import "foundation/components/buttons"
-//@import "foundation/components/forms"
-//@import "foundation/components/custom-forms"
-//@import "foundation/components/button-groups"
-//@import "foundation/components/dropdown-buttons"
-//@import "foundation/components/split-buttons"
-//@import "foundation/components/flex-video"
-//@import "foundation/components/section"
-//@import "foundation/components/top-bar"
-//@import "foundation/components/orbit"
-//@import "foundation/components/reveal"
-//@import "foundation/components/joyride"
-//@import "foundation/components/clearing"
+//@import "foundation/components/accordion"
 //@import "foundation/components/alert-boxes"
+//@import "foundation/components/block-grid"
 //@import "foundation/components/breadcrumbs"
+//@import "foundation/components/button-groups"
+//@import "foundation/components/buttons"
+//@import "foundation/components/clearing"
+//@import "foundation/components/dropdown"
+//@import "foundation/components/dropdown-buttons"
+//@import "foundation/components/flex-video"
+//@import "foundation/components/forms"
+@import "foundation/components/grid"
+//@import "foundation/components/inline-lists"
+//@import "foundation/components/joyride"
 //@import "foundation/components/keystrokes"
 //@import "foundation/components/labels"
-//@import "foundation/components/inline-lists"
+//@import "foundation/components/magellan"
+//@import "foundation/components/orbit"
 //@import "foundation/components/pagination"
 //@import "foundation/components/panels"
 //@import "foundation/components/pricing-tables"
 //@import "foundation/components/progress-bars"
+//@import "foundation/components/reveal"
 //@import "foundation/components/side-nav"
+//@import "foundation/components/split-buttons"
 //@import "foundation/components/sub-nav"
 //@import "foundation/components/switch"
-//@import "foundation/components/magellan"
 //@import "foundation/components/tables"
+//@import "foundation/components/tabs"
 //@import "foundation/components/thumbs"
 //@import "foundation/components/tooltips"
-//@import "foundation/components/dropdown"
-<% } %>
+@import "foundation/components/type"
+//@import "foundation/components/offcanvas" // !includes type and top-bar
+//@import "foundation/components/visibility"
+
 
 // Vendor
 
@@ -78,7 +79,7 @@
 
 
 // Framework tweaks
-@import "framework-tweaks"
+@import "foundation-tweaks"
 
 // For some styles in hurry to fix it later
 @import "shame"
