static pages relative -> absolute paths

--- a/app/templates/app/styles/all.scss
+++ b/app/templates/app/styles/all.scss
@@ -18,7 +18,7 @@
 @import "foundation-settings";
 
 
-// Required gems
+// Foundation
 //@import "../bower_components/foundation/scss/foundation/components/accordion";
 //@import "../bower_components/foundation/scss/foundation/components/alert-boxes";
 //@import "../bower_components/foundation/scss/foundation/components/block-grid";
