--- a/app/templates/app/styles/_blocks.scss
+++ b/app/templates/app/styles/_blocks.scss
@@ -1,2 +1,2 @@
-@import "../blocks/b-footer/_b-footer";
-@import "../blocks/b-header/_b-header";
+@import "../blocks/footer/_footer";
+@import "../blocks/header/_header";
