--- a/app/templates/app/collector.html
+++ b/app/templates/app/collector.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
@@ -35,17 +36,11 @@
 
 <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
 
-<!-- build:js scripts/dev/hogan.js -->
+<!-- build:js({.tmp,app}) scripts/dev/dev.js -->
 <script type="text/javascript" src="bower_components\hogan\web\builds\2.0.0\hogan-2.0.0.js"></script>
-<!-- endbuild -->
-
-<!-- build:js(.tmp) scripts/dev/fish.js -->
 <script type="text/javascript" src="scripts/dev/fish_blocks.js"></script>
 <script type="text/javascript" src="scripts/dist-templates.js"></script>
 <script type="text/javascript" src="scripts/dev/dev-templates.js"></script>
-<!-- endbuild -->
-
-<!-- build:js scripts/dev/dev.js -->
 <script type="text/javascript" src="scripts/dev/fish_groups.js"></script>
 <script type="text/javascript" src="scripts/dev/protonav.js"></script>
 <!-- endbuild -->
