Dependencies updates, brwoser sync correction, static pages deprecated.

--- a/app/templates/app/collector.html
+++ b/app/templates/app/collector.html
@@ -9,7 +9,7 @@
 
     <title>collector</title>
 
-    <link rel="stylesheet" href="styles/all.css">
+    <link rel="stylesheet" href="styles/main.css">
 
 </head>
 
