--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,7 +9,7 @@
 
     <title><%= _.slugify(projectName) %></title>
 
-    <link rel="stylesheet" href="styles/all.css">
+    <link rel="stylesheet" href="styles/main.css">
 
     <!-- build:js scripts/utilities.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -20,8 +20,9 @@
 
 <div class="layout"></div>
 
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+
 <!-- build:js scripts/main.js -->
-<script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
 <script type="text/javascript" src="bower_components/foundation/js/foundation/foundation.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <!-- endbuild -->
@@ -61,8 +62,6 @@
     //    protoRender(name, context);
 </script>
 
-<script src="http://192.168.1.5:3000/socket.io/socket.io.js"></script>
-<script src="http://192.168.1.5:3001/browser-sync-client.min.js"></script>
 <!--<script src="http://192.168.1.5:8080/target/target-script-min.js#anonymous"></script>-->
 
 
