fixes, no jquery need for protonav

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru" class="no-js">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- insert:meta -->
+    <!-- insert:meta -->
 
-  <!-- start:devMeta -->
-  <meta name="description" content="">
-  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
-  <title><%= _.slugify(projectName) %></title>
-  <!-- end:devMeta -->
+    <!-- start:devMeta -->
+    <meta name="description" content="">
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
+    <title><%= _.slugify(projectName) %></title>
+    <!-- end:devMeta -->
 
 
-  <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 
-  <!-- build:js scripts/utilities.js -->
-  <script src="bower/modernizr/modernizr.js"></script>
-  <!-- endbuild -->
+    <!-- build:js scripts/utilities.js -->
+    <script src="bower/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
 
 </head>
 
 <body>
 
 <div class="layout">
-  <!-- insert:content -->
+    <!-- insert:content -->
 </div>
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
@@ -42,34 +42,44 @@
 
 <!-- setting fish utilities -->
 <script type="text/javascript">
-  window.clone = function (obj) {
-    var Clone, c;
-    Clone = function () {};
-    Clone.prototype = obj;
-    c = new Clone();
-    c.constructor = Clone;
-    return c;
-  };
-  window.gFish = {};
-  gFish.partials = {};
-  window.gBlocks = {};
+    if (typeof Object.create != 'function') {
+        (function () {
+            var F = function () {
+            };
+            Object.create = function (o) {
+                if (arguments.length > 1) {
+                    throw Error('Second argument not supported');
+                }
+                if (o === null) {
+                    throw Error('Cannot set a null [[Prototype]]');
+                }
+                if (typeof o != 'object') {
+                    throw TypeError('Argument must be an object');
+                }
+                F.prototype = o;
+                return new F;
+            };
+        })();
+    }
+    window.gState = {};
+    window.gBlocks = {};
 </script>
 
 
 <!-- build:js({.tmp,app}) scripts/dev/dev.js -->
 <script type="text/javascript" src="bower\hogan\web\builds\2.0.0\hogan-2.0.0.js"></script>
-<script type="text/javascript" src="scripts/dev/fish_blocks.js"></script>
+<script type="text/javascript" src="scripts/dev/state_blocks.js"></script>
 <script type="text/javascript" src="scripts/dev/dev-blocks.js"></script>
 <script type="text/javascript" src="scripts/dev/dev-templates.js"></script>
-<script type="text/javascript" src="scripts/dev/fish_groups.js"></script>
+<script type="text/javascript" src="scripts/dev/state_groups.js"></script>
 <script type="text/javascript" src="scripts/dev/protonav.js"></script>
 <!-- endbuild -->
 
 <script type="text/javascript">
-  var templateName = 'main';
-  var context = 'main';
-  protoRender(localStorage.getItem('defaultProto') || templateName, localStorage.getItem('defaultFish') || context);
-  //    protoRender(name, context);
+    var templateName = 'main';
+    var context = 'main';
+    protoRender(localStorage.getItem('defaultProto') || templateName, localStorage.getItem('defaultState') || context);
+    //    protoRender(name, context);
 </script>
 
 <!--<script src="http://192.168.1.5:8080/target/target-script-min.js#anonymous"></script>-->
