--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -14,9 +14,11 @@
     <!-- end:devMeta -->
 
 
+    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 
-    <!-- build:js scripts/utilities.js -->
+    <!-- build:js scripts/modernizr.js -->
     <script src="bower/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
@@ -24,11 +26,10 @@
 
 <body>
 
-<div class="layout">
-    <!-- insert:content -->
-</div>
+<div class="layout"><!-- insert:content --></div>
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+
 
 <!-- build:js scripts/main.js -->
 <script type="text/javascript" src="bower/fastclick/lib/fastclick.js"></script>
@@ -37,56 +38,6 @@
 <!-- endbuild -->
 
 <!-- insert:bottom-->
-
-<!-- start:devTools -->
-
-<!-- setting fish utilities -->
-<script type="text/javascript">
-    if (typeof Object.create != 'function') {
-        (function () {
-            var F = function () {
-            };
-            Object.create = function (o) {
-                if (arguments.length > 1) {
-                    throw Error('Second argument not supported');
-                }
-                if (o === null) {
-                    throw Error('Cannot set a null [[Prototype]]');
-                }
-                if (typeof o != 'object') {
-                    throw TypeError('Argument must be an object');
-                }
-                F.prototype = o;
-                return new F;
-            };
-        })();
-    }
-    window.gState = {};
-    window.gBlocks = {};
-</script>
-
-
-<!-- build:js({.tmp,app}) scripts/dev/dev.js -->
-<script type="text/javascript" src="bower\hogan\web\builds\2.0.0\hogan-2.0.0.js"></script>
-<script type="text/javascript" src="scripts/dev/state_blocks.js"></script>
-<script type="text/javascript" src="scripts/dev/dev-blocks.js"></script>
-<script type="text/javascript" src="scripts/dev/dev-templates.js"></script>
-<script type="text/javascript" src="scripts/dev/state_groups.js"></script>
-<script type="text/javascript" src="scripts/dev/protonav.js"></script>
-<!-- endbuild -->
-
-<script type="text/javascript">
-    var templateName = 'main';
-    var context = 'main';
-    protoRender(localStorage.getItem('defaultProto') || templateName, localStorage.getItem('defaultState') || context);
-    //    protoRender(name, context);
-</script>
-
-<!--<script src="http://192.168.1.5:8080/target/target-script-min.js#anonymous"></script>-->
-
-
-<!-- end:devTools -->
-
 </body>
 
 </html>
